// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match with snapshot 1`] = `
<div>
  <div
    class="sc-bdnylx fhbCOd"
  >
    Button
  </div>
</div>
`;

exports[`<Button /> should render disable button 1`] = `
<div>
  <div
    class="sc-bdnylx drddMu"
    disabled=""
  >
    Button
  </div>
</div>
`;
